# planet

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  README.ru.md  setup.sh
docs/: ENGINE.md  ENGINE.ru.md  api_reference.md
projects/example/: manifest.plm
projects/example/assets/shaders/: default.frag
projects/example/dexecl/: config.dexl
projects/example/scripts/: main.lua  maze.lua
projects/maze/: manifest.plm
projects/maze/assets/shaders/: default.vert
projects/myproject/: manifest.plm  project.planet
projects/myproject/maps/: demo.map
projects/myproject/scripts/: main.lua
scripts/: package-windows.sh
src/: main.cpp
src/bundler/: bundler.cpp  bundler.h  kerdata.cpp  kerdata.h  main.cpp
src/lua/: lua_engine.cpp  lua_engine.h
src/lua/bindings/: audio_bindings.cpp  core_bindings.cpp  dexecl_bindings.cpp  ecs_bindings.cpp  editor_bindings.cpp  fmod_audio_bindings.cpp  input_bindings.cpp  map_bindings.cpp  physics_bindings.cpp  render_bindings.cpp
src/planet/audio/: audio.cpp  audio.h  audio_stub.cpp  fmod_audio.cpp  fmod_audio.h
src/planet/core/: camera.cpp  camera.h  console.cpp  console.h  dexecl_engine.cpp  dexecl_engine.h  engine.cpp  engine.h  input.cpp  input.h  json.cpp  json.h  logger.h  math.cpp  math.h  random.cpp  random.h  scene.cpp  scene.h  timer.cpp  timer.h  window.cpp  window.h
src/planet/debug/: debug_server.cpp  debug_server.h
src/planet/ecs/: component.cpp  component.h  ecs.cpp  ecs.h  system.cpp  system.h
src/planet/editor/: editor.cpp  editor.h  editor_main.cpp  editor_ui.cpp  editor_ui.h  file_dialog.cpp  file_dialog.h  log_console.cpp  log_console.h  lsp_client.cpp  lsp_client.h  project.cpp  project.h  script_editor.cpp  script_editor.h
src/planet/map/: map_loader.cpp  map_loader.h  map_parser.cpp  map_parser.h
src/planet/mapper/: mapper.cpp  mapper.h  mapper_main.cpp
src/planet/physics/: physics.cpp  physics.h
src/planet/render/: font_data.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  model_renderer.cpp  model_renderer.h  post_processor.cpp  post_processor.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
src/planet/resource/: resource_manager.cpp  resource_manager.h
